# sykli

./: .gitguardian.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CODEX_PROMPT_PHASE_1.md  CODEX_PROMPT_PHASE_2.md  CODEX_PROMPT_PHASE_2_5.md  CODEX_PROMPT_PHASE_2_5_FIXES.md  CODEX_PROMPT_PR_REVIEW_PRIMITIVES.md  CODEX_PROMPT_RELEASE_AND_DOCS.md  CODE_OF_CONDUCT.md  Dockerfile  GETTING_STARTED.md  Makefile  README.md  RELEASE.md  action.yml  go.mod  go.sum  install.sh  sykli.exs  sykli.go
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  sykli-ci.yml
.sykli/runs/: 2026-01-01T00-13-22.800482Z.json  2026-01-07T17-21-14.918410Z.json  last_good.json  latest.json
core/: .credo.exs  .gitignore  README.md  mix.exs
core/config/: prod.exs  test.exs
core/lib/: sykli.ex
core/test/: cache_test.exs  core_test.exs  error_hints_test.exs  graph_viz_test.exs  progress_test.exs  services_integration_test.exs  task_error_test.exs  test_helper.exs
docs/: agent-contract-semantics.md  cache-key-investigation.md  deep-dive-findings.md  done.md  error-codes.md  eventqueue-flake-investigation.md  false-protocol-schema.md  github-native.md  mcp-tools.md  runtimes.md  sdk-schema.md
docs/adr/: 0001-k8s-api-client.md  (+21 more)
schemas/: sykli-pipeline.schema.json
scripts/: bump-version.sh  check-version.sh  publish-all.sh  publish-elixir.sh  publish-go.sh  publish-python.sh  publish-rust.sh  publish-ts.sh  release.sh  validate-conformance-schema.py
sdk/python/: .gitignore  README.md  REFERENCE.md  pyproject.toml
sdk/python/examples/01-basic/: sykli.py
sdk/python/examples/02-caching/: sykli.py
sdk/python/examples/03-containers/: sykli.py
sdk/python/examples/04-templates/: sykli.py
sdk/python/examples/05-composition/: sykli.py
sdk/python/examples/06-matrix/: sykli.py
sdk/python/src/sykli/: __init__.py
sdk/python/tests/: test_combinators.py  test_conditions.py  test_pipeline.py  test_properties.py  test_serialization.py  test_task.py  test_validation.py
sdk/rust/: Cargo.toml  README.md  REFERENCE.md
sdk/rust/examples/: README.md  parity_test.rs
sdk/rust/examples/01-basic/: main.rs
sdk/rust/examples/02-caching/: main.rs
sdk/rust/examples/03-containers/: main.rs
sdk/rust/examples/04-templates/: main.rs
sdk/rust/examples/05-composition/: main.rs
sdk/rust/examples/06-matrix/: main.rs
sdk/rust/src/: lib.rs  target.rs
(+658 files in other folders)
