[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sykli"
version = "0.5.3"
description = "AI-native CI pipeline SDK for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "hypothesis>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/sykli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
