[package]
name = "sykli"
version = "0.5.1"
edition = "2021"
description = "CI pipelines defined in Rust instead of YAML"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yairfalse/sykli"
homepage = "https://github.com/yairfalse/sykli"
documentation = "https://docs.rs/sykli"
keywords = ["ci", "pipeline", "build", "automation"]
categories = ["development-tools"]
rust-version = "1.80"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
